# Neosgenesis

./: .gitignore  COMPLETE_REFACTORING_SUCCESS.md  LICENSE  README.md  README_EN.md  cognitive_scheduler_example.py  enhanced_retrospection_demo.py  final_integration_test.py  integration_verification_test.py  neogenesis_agent_runner.py  pyproject.toml  requirements.txt  retrospection_engine_example.py  setup.cfg
neogenesis_langchain/: .gitignore  README.md  __init__.py  adapters.py  install_guide.md  standalone_demo.py  tools.py
neogenesis_langchain/chains/: __init__.py  advanced_chains.py  chains.py
neogenesis_langchain/examples/: __init__.py  examples.py  usage_examples.py
neogenesis_langchain/execution/: __init__.py  coordinators.py  execution_engines.py
neogenesis_langchain/optimization/: __init__.py  mab_optimization.py
neogenesis_langchain/state/: __init__.py  distributed_state.py  state_management.py  state_transactions.py
neogenesis_langchain/storage/: __init__.py  persistent_storage.py
neogenesis_system/: FRAMEWORK_GUIDE.md  README.md  README_EN.md  __init__.py  abstractions.py  config.py  data_structures.py  demo_config.py  interactive_demo.py  main.py  pydantic_config.py  quick_demo.py  run_demo.py  start_demo.py
neogenesis_system/api/: __init__.py  main.py  models.py  server.py
neogenesis_system/cognitive_engine/: data_structures.py  mab_converger.py  path_generator.py  path_library.py  reasoner.py  semantic_analyzer.py
neogenesis_system/core/: cognitive_scheduler.py  neogenesis_planner.py  retrospection_engine.py  strategy_interpreter.py  workflow_agent.py
neogenesis_system/examples/: cognitive_scheduler_exploration_demo.py  complete_refactor_summary.py  dynamic_path_generator_demo.py  framework_usage_example.py  integrated_cognitive_growth_demo.py  integrated_provenance_demo.py  knowledge_explorer_demo.py  knowledge_provenance_demo.py  neogenesis_planner_demo.py  quick_start_dynamic_paths.py  quick_start_provenance.py  quick_start_trial_ground.py  search_tools_refactor_demo.py  tool_decorator_demo.py  trial_ground_demo.py
neogenesis_system/langchain_integration/: __init__.py  adapters.py  advanced_chains.py  chains.py  coordinators.py  distributed_state.py  examples.py  execution_engines.py  mab_optimization.py  persistent_storage.py  state_management.py  state_transactions.py  tools.py  usage_examples.py
neogenesis_system/meta_mab/: __init__.py  controller.py  data_structures.py  llm_base.py  llm_manager.py  mab_converger.py  path_generator.py  rag_seed_generator.py  reasoner.py  state_manager.py
neogenesis_system/meta_mab/providers/: __init__.py  anthropic_client.py
neogenesis_system/meta_mab/utils/: __init__.py  client_adapter.py  client_example.py  common_utils.py  deepseek_client.py  performance_optimizer.py  search_client.py  search_tools.py  shutdown_manager.py  tool_abstraction.py
neogenesis_system/planners/: __init__.py  neogenesis_planner.py
neogenesis_system/providers/: __init__.py  client_adapter.py  client_example.py  knowledge_explorer.py  llm_base.py  llm_manager.py  rag_seed_generator.py  search_client.py  search_tools.py  test.py
neogenesis_system/providers/impl/: anthropic_client.py  deepseek_client.py  ollama_client.py  openai_client.py
neogenesis_system/shared/: common_utils.py  data_structures.py  performance_optimizer.py  shutdown_manager.py  state_manager.py
neogenesis_system/tests/: __init__.py  run_unit_tests.py  test_framework_core.py  test_neogenesis_planner.py
neogenesis_system/tests/examples/: __init__.py  simple_test_example.py
neogenesis_system/tests/unit/: __init__.py  test_mab_converger.py  test_path_creation_robustness.py  test_rag_seed_generator.py  test_reasoner.py
neogenesis_system/tools/: __init__.py  default_tools.py  image_generation_tools.py  tool_abstraction.py
providers/: ollama_client.py  openai_client.py
