[metadata]
name = neogenesis-langchain
version = attr: neogenesis_langchain.__version__
description = Neogenesis System integration with LangChain
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/neogenesis/neogenesis-langchain
author = Neogenesis System Team
author_email = neogenesis@example.com
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Scientific/Engineering :: Artificial Intelligence

[options]
packages = find:
python_requires = >=3.8
install_requires =
    langchain>=0.1.0
    langchain-core>=0.1.0
    pydantic>=2.0.0
    numpy>=1.21.0
    pandas>=1.3.0
    typing-extensions>=4.0.0
    dataclasses-json>=0.5.0
include_package_data = True

[options.packages.find]
exclude =
    tests*
    docs*
    examples*

[options.extras_require]
redis = redis>=4.0.0
lmdb = lmdb>=1.3.0
mongodb = pymongo>=4.0.0
performance = numba>=0.56.0; scipy>=1.7.0
distributed = dask>=2021.0.0; ray>=1.0.0
ml = scikit-learn>=1.0.0; torch>=1.9.0
dev = 
    pytest>=7.0.0
    pytest-asyncio>=0.21.0
    pytest-cov>=4.0.0
    black>=22.0.0
    isort>=5.10.0
    flake8>=4.0.0
    mypy>=0.991
    pre-commit>=2.20.0
docs = 
    sphinx>=5.0.0
    sphinx-rtd-theme>=1.0.0
    sphinx-autoapi>=2.0.0
    myst-parser>=0.18.0
full = 
    neogenesis-langchain[redis,lmdb,mongodb,performance,distributed,ml]

[options.entry_points]
console_scripts =
    neogenesis-demo = neogenesis_langchain.examples.usage_examples:main

# Flake8 configuration
[flake8]
max-line-length = 88
extend-ignore = E203, W503, E501
exclude = 
    .git,
    __pycache__,
    build,
    dist,
    *.egg-info,
    .venv,
    .tox,
    .mypy_cache
per-file-ignores = 
    __init__.py:F401
